styled front door

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
   </head>
   <body>
     <div class="house">
-      <div class="main"></div>
+      <div class="main">
+        <div class="roof"></div>
+        <div class="front">
+          <div class="door"></div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
