Added the windows

--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
   <body>
     <div class="house">
       <div class="main">
+        <div class="windows_right"></div>
+        <div class="windows_left"></div>
+        <div class="line adjst"></div>
         <div class="roof"></div>
         <div class="front">
+          <div class="line"></div>
           <div class="door"></div>
         </div>
       </div>
