Added the side building

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
           <div class="line"></div>
           <div class="door"></div>
         </div>
+        <div class="side">
+          <div class="line"></div>
+          <div class="windows"></div>
+        </div>
+        <div class="tree"></div>
+        <div class="tree tree2"></div>
       </div>
     </div>
   </body>
